--- a/index.html
+++ b/index.html
@@ -73,15 +73,13 @@
                     </div>
                     <div class="d-none d-xl-flex flex-shirink-0">
                         <div id="phone-tada" class="d-flex align-items-center justify-content-center me-4">
-                            <a href="" class="position-relative animated tada infinite">
-                                <i class="fa fa-phone-alt text-white fa-2x"></i>
-                                <div class="position-absolute" style="top: -7px; left: 20px;">
-                                    <span><i class="fa fa-comment-dots text-secondary"></i></span>
-                                </div>
+                            <a href="#" class="position-relative animated tada infinite">
+                                <i class="bx bx-phone text-white fa-2x"></i>
+                                
                             </a>
                         </div>
                         <div class="d-flex flex-column pe-4 border-end">
-                            <span class="text-white-50">Have any questions?</span>
+                            <span class="text-white">Have any questions?</span>
                             <span class="text-secondary">Call: +268 7600 0000</span>
                         </div>
                     </div>
@@ -172,7 +170,7 @@
                         <div class="services-item bg-light">
                             <div class="p-4 text-center services-content">
                                 <div class="services-content-icon">
-                                    <i class="fa fa-code fa-7x mb-4 text-primary"></i>
+                                    <i class="bx bx-sitemap fa-7x mb-4 text-primary"></i>
                                     <h4 class="mb-3">Web Design</h4>
                                     <p class="mb-4">Lorem ipsum dolor sit amet elit. Sed efficitur quis purus ut interdum. Aliquam dolor eget urna ultricies tincidunt.</p>
                                     <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Read More</a>
@@ -184,7 +182,7 @@
                         <div class="services-item bg-light">
                             <div class="p-4 text-center services-content">
                                 <div class="services-content-icon">
-                                    <i class="fa fa-file-code fa-7x mb-4 text-primary"></i>
+                                    <i class="bx bx-server fa-7x mb-4 text-primary"></i>
                                     <h4 class="mb-3">Web Development</h4>
                                     <p class="mb-4">Lorem ipsum dolor sit amet elit. Sed efficitur quis purus ut interdum. Aliquam dolor eget urna ultricies tincidunt.</p>
                                     <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Read More</a>
@@ -196,7 +194,7 @@
                         <div class="services-item bg-light">
                             <div class="p-4 text-center services-content">
                                 <div class="services-content-icon">
-                                    <i class="fas fa-laptop fa-7x mb-4 text-primary"></i>
+                                    <i class="bx bx-code-alt fa-7x mb-4 text-primary"></i>
                                     <h4 class="mb-3">Software Development</h4>
                                     <p class="mb-4">Lorem ipsum dolor sit amet elit. Sed efficitur quis purus ut interdum. Aliquam dolor eget urna ultricies tincidunt.</p>
                                     <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Read More</a>
@@ -208,7 +206,7 @@
                         <div class="services-item bg-light">
                             <div class="p-4 text-center services-content">
                                 <div class="services-content-icon">
-                                    <i class="fa fa-external-link-alt fa-7x mb-4 text-primary"></i>
+                                    <i class="bx bx-category-alt fa-7x mb-4 text-primary"></i>
                                     <h4 class="mb-3">UI/UX Design</h4>
                                     <p class="mb-4">Lorem ipsum dolor sit amet elit. Sed efficitur quis purus ut interdum. Aliquam dolor eget urna ultricies tincidunt.</p>
                                     <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Read More</a>
@@ -236,7 +234,7 @@
                                 <img src="img/project.png" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
-                                        <h4 class="text-secondary">Project 1</h4>
+                                        <h4 style="color: var(--bs-secondary)">Project 1</h4>
                                         <p class="m-0 text-white">Details coming soon</p>
                                     </a>
                                 </div>
@@ -249,7 +247,7 @@
                                 <img src="img/project.png" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
-                                        <h4 class="text-secondary">Project 2</h4>
+                                        <h4 style="color: var(--bs-secondary)">Project 2</h4>
                                         <p class="m-0 text-white">Details coming soon</p>
                                     </a>
                                 </div>
@@ -262,7 +260,7 @@
                                 <img src="img/project.png" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="https://www.pay.centurionbd.com" target="_blank" class="text-center">
-                                        <h4 class="text-secondary">Trusted Payments</h4>
+                                        <h4 style="color: var(--bs-secondary)">Trusted Payments</h4>
                                         <p class="m-0 text-white">A payments platform</p>
                                     </a>
                                 </div>
@@ -286,7 +284,7 @@
                         <div class="col-xl-4 col-lg-6 wow fadeIn" data-wow-delay=".3s">
                             <div class="d-flex bg-light p-3 rounded">
                                 <div class="flex-shrink-0 btn-square bg-secondary rounded-circle" style="width: 64px; height: 64px;">
-                                    <i class="bx bx-pin text-white"></i>
+                                    <i class="bx bx-map text-white"></i>
                                 </div>
                                 <div class="ms-3">
                                     <h4 class="text-primary">Address</h4>
@@ -336,32 +334,32 @@
                     <div class="col-lg-3 col-md-6">
                         <a href="#" class="h3 text-secondary">Short Link</a>
                         <div class="mt-4 d-flex flex-column short-link">
-                            <a href="#about" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>About us</a>
-                            <a href="#contact" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Contact us</a>
-                            <a href="#service" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Our Services</a>
-                            <a href="#project" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Our Projects</a>
+                            <a href="#about" class="mb-2 text-white"><i class="bx bx-caret-right text-secondary me-2"></i>About us</a>
+                            <a href="#contact" class="mb-2 text-white"><i class="bx bx-caret-right text-secondary me-2"></i>Contact us</a>
+                            <a href="#service" class="mb-2 text-white"><i class="bx bx-caret-right text-secondary me-2"></i>Our Services</a>
+                            <a href="#project" class="mb-2 text-white"><i class="bx bx-caret-right text-secondary me-2"></i>Our Projects</a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <a href="#" class="h3 text-secondary">Help Link</a>
                         <div class="mt-4 d-flex flex-column help-link">
-                            <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Terms Of use</a>
-                            <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Privacy Policy</a>
+                            <a href="" class="mb-2 text-white"><i class="bx bx-caret-right text-secondary me-2"></i>Terms Of use</a>
+                            <a href="" class="mb-2 text-white"><i class="bx bx-caret-right text-secondary me-2"></i>Privacy Policy</a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <a href="#" class="h3 text-secondary">Contact Us</a>
                         <div class="text-white mt-4 d-flex flex-column contact-link">
-                            <a href="#" class="pb-3 text-light border-bottom border-primary"><i class="fas fa-map-marker-alt text-secondary me-2"></i> Mbabane, Eswatini</a>
-                            <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-phone-alt text-secondary me-2"></i> +268 7600 0000</a>
-                            <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-envelope text-secondary me-2"></i> info@centurionbd.con</a>
+                            <a href="#" class="pb-3 text-light border-bottom border-primary"><i class="bx bx-map text-secondary me-2"></i> Mbabane, Eswatini</a>
+                            <a href="#" class="py-3 text-light border-bottom border-primary"><i class="bx bx-phone text-secondary me-2"></i> +268 7600 0000</a>
+                            <a href="#" class="py-3 text-light border-bottom border-primary"><i class="bx bx-envelope text-secondary me-2"></i> info@centurionbd.con</a>
                         </div>
                     </div>
                 </div>
                 <hr class="text-light mt-5 mb-4">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start">
-                        <span class="text-light"><a href="#" class="text-secondary"><i class="fas fa-copyright text-secondary me-2"></i>Centurion</a>, All right reserved.</span>
+                        <span class="text-light"><a href="#" class="text-secondary"><i class="bx bx-copyright text-secondary me-2"></i>Centurion</a>, All right reserved.</span>
                     </div>
                 </div>
             </div>
