added solution links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
+          <link rel="icon" type="image/png" href="img/icon.png">
 
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -80,7 +81,7 @@
                         </div>
                         <div class="d-flex flex-column pe-4 border-end">
                             <span class="text-white">Have any questions?</span>
-                            <span class="text-secondary">Call: +268 7600 0000</span>
+                            <span class="text-white fw-bold">Call: +268 7600 0000</span>
                         </div>
                     </div>
                 </nav>
@@ -103,7 +104,7 @@
                                 <h6 class="text-secondary h4 animated fadeInUp">Best IT Solutions</h6>
                                 <h1 class="text-white display-1 mb-4 animated fadeInRight">An Innovative IT Solutions Agency</h1>
                                 <p class="mb-4 text-white fs-5 animated fadeInDown">Leading software development designed to make your business more competitive.</p>
-                                <a href="#about" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Read More</button></a>
+                                <a href="#about" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Read More</button></a>
                                 <a href="#contact" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contact Us</button></a>
                             </div>
                         </div>
@@ -115,7 +116,7 @@
                                 <h6 class="text-secondary h4 animated fadeInUp">Best IT Solutions</h6>
                                 <h1 class="text-white display-1 mb-4 animated fadeInLeft">Quality Digital Services You Really Need!</h1>
                                 <p class="mb-4 text-white fs-5 animated fadeInDown">Leading software development designed to make your business more competitive.</p>
-                                <a href="#about" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Read More</button></a>
+                                <a href="#about" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Read More</button></a>
                                 <a href="#contact" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contact Us</button></a>
                             </div>
                         </div>
@@ -228,42 +229,33 @@
                     <h1>Our Recently Completed Projects</h1>
                 </div>
                 <div class="row g-5">
-                    <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
+                    <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
                         <div class="project-item">
-                            <div class="project-img">
-                                <img src="img/project.png" class="img-fluid w-100 rounded" alt="">
-                                <div class="project-content">
-                                    <a href="#" class="text-center">
-                                        <h4 style="color: var(--bs-secondary)">Project 1</h4>
-                                        <p class="m-0 text-white">Details coming soon</p>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".5s">
-                        <div class="project-item">
-                            <div class="project-img">
-                                <img src="img/project.png" class="img-fluid w-100 rounded" alt="">
-                                <div class="project-content">
-                                    <a href="#" class="text-center">
-                                        <h4 style="color: var(--bs-secondary)">Project 2</h4>
-                                        <p class="m-0 text-white">Details coming soon</p>
-                                    </a>
-                                </div>
+                            <div class="project-img" onclick="goToTrustedPay()">
+                                <img src="img/pay.png" class="img-fluid w-100 rounded" alt="">
+                                <a href="https://www.pay.centurionbd.com" target="_blank" class="text-center">
+                                    <h4 style="color: var(--bs-secondary)">Trusted Payments</h4>
+                                </a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
                         <div class="project-item">
                             <div class="project-img">
-                                <img src="img/project.png" class="img-fluid w-100 rounded" alt="">
-                                <div class="project-content">
-                                    <a href="https://www.pay.centurionbd.com" target="_blank" class="text-center">
-                                        <h4 style="color: var(--bs-secondary)">Trusted Payments</h4>
-                                        <p class="m-0 text-white">A payments platform</p>
+                                <img src="img/temp.png" class="img-fluid w-100 rounded" alt="">
+                                <a href="#" target="_blank" class="text-center">
+                                        <h4 style="color: var(--bs-secondary)">Coming Soon</h4>
                                     </a>
-                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
+                        <div class="project-item">
+                            <div class="project-img">
+                                <img src="img/temp.png" class="img-fluid w-100 rounded" alt="">
+                                <a href="#" target="_blank" class="text-center">
+                                    <h4 style="color: var(--bs-secondary)">Coming Soon</h4>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -332,7 +324,7 @@
                         <p class="mt-4 text-light">Leading software development designed to make your business more competitive.</p>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <a href="#" class="h3 text-secondary">Short Link</a>
+                        <a href="#" class="h3 text-white">Short Link</a>
                         <div class="mt-4 d-flex flex-column short-link">
                             <a href="#about" class="mb-2 text-white"><i class="bx bx-caret-right text-secondary me-2"></i>About us</a>
                             <a href="#contact" class="mb-2 text-white"><i class="bx bx-caret-right text-secondary me-2"></i>Contact us</a>
@@ -341,14 +333,14 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <a href="#" class="h3 text-secondary">Help Link</a>
+                        <a href="#" class="h3 text-white">Help Link</a>
                         <div class="mt-4 d-flex flex-column help-link">
                             <a href="" class="mb-2 text-white"><i class="bx bx-caret-right text-secondary me-2"></i>Terms Of use</a>
                             <a href="" class="mb-2 text-white"><i class="bx bx-caret-right text-secondary me-2"></i>Privacy Policy</a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <a href="#" class="h3 text-secondary">Contact Us</a>
+                        <a href="#" class="h3 text-white">Contact Us</a>
                         <div class="text-white mt-4 d-flex flex-column contact-link">
                             <a href="#" class="pb-3 text-light border-bottom border-primary"><i class="bx bx-map text-secondary me-2"></i> Mbabane, Eswatini</a>
                             <a href="#" class="py-3 text-light border-bottom border-primary"><i class="bx bx-phone text-secondary me-2"></i> +268 7600 0000</a>
@@ -379,8 +371,8 @@
         <script src="lib/waypoints/waypoints.min.js"></script>
         <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
-        <!-- Template Javascript -->
         <script src="js/main.js"></script>
+        <script src="js/links.js"></script>
     </body>
 
 </html>
