--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                       <div class="row align-items-center offset-sm-1 g-3">
                         <div class="col-md-6 col-xl-4 order-1 order-md-0">
                           <h2 class="text-secondary mb-md-5">Trusted Payments</h2>
-                          <p class="text-black">Make a plan for the emergence of life. We protect your most precious assets, allowing you to devote your time and energy to more essential things in life.</p>
-                          <p class="text-black mt-3">Discover the most appropriate fit for you and your Family.</p><a class="btn btn-primary btn-centurion mt-5" href="https://pay.centurionbd.com" target="_blank"><span class="fas fa-chevron-right fa-xs btn-icon"></span><span class="btn-text">Try now</span></a>
+                          <p class="text-black">Buyers are hesitant to pay upfront due to the fear of non-delivery, while service providers fear non-payment despite delivering goods or services. To bridge this gap, a trusted payment solution is essential. This solution acts as a middle player, holding funds in escrow until certain conditions are met, ensuring both parties’ interests are protected.</p>
+                          <p class="text-black mt-3">Discover the most appropriate fit for you and your Business.</p><a class="btn btn-primary btn-centurion mt-5" href="https://pay.centurionbd.com" target="_blank"><span class="fas fa-chevron-right fa-xs btn-icon"></span><span class="btn-text">Try now</span></a>
                         </div>
                         <div class="col-md-6 col-xl-8 text-end">
                           <div class="img-shape"><img class="feature-img" src="assets/img/icons/pay.png" alt="..." /></div>
