--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
                     <div data-i18n="Without navbar">Smart Ticket</div>
                   </a>
                 </li>
+                <li class="menu-item">
+                  <a href="#" target="_blank" class="menu-link">
+                    <div data-i18n="Without navbar">Airtime Purchase</div>
+                  </a>
+                </li>
               </ul>
             </li>
             <li class="menu-item">
