--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                                 Our individual services are made up of services which are specifically designed for the individual client. These services are meant to provide the customer with convinience on a daily basis.
                               </p>
                               <p class="card-text text-dark">
-                                This include services for buying event tickets, buying airtime and payment services. Most our services are ready to use without requiring registration.
+                                This include services for buying event tickets, buying airtime and payment services.
                               </p>
                             </div>
                           </div>
